hard-gists/1608287/run.log
=== Docker Run Log for 1608287 ===
Started at: Mi 29. Okt 12:21:03 CET 2025

[2025-10-29 12:21:03] START: Running container for 1608287
[2025-10-29 12:21:04] SUCCESS: Container 76fb63586b2db3611643db4d0d29f095ab548fcf8b4ee513dc344ad03df59b85 started for 1608287
=== Container logs for 1608287 ===
  File "/snippet.py", line 25
    print this_dir
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1608287 ===
[2025-10-29 12:21:06] INFO: Container 76fb63586b2db3611643db4d0d29f095ab548fcf8b4ee513dc344ad03df59b85 has stopped
